--- a/resources/templates/layout.html
+++ b/resources/templates/layout.html
@@ -3,17 +3,14 @@
 <html>
   <head>
     <title>loupi -- Launch Open User Persistence Integration</title>
-    <link rel="stylesheet" href="/css/planner.css" media="all" type="text/css" />
 
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
 
-    <link rel="stylesheet" href="/css/bootstrap.css" />
-    <link rel="stylesheet" href="/css/admin.css" />
+    <link rel="stylesheet" href="/api/css/bootstrap.css" />
+    <link rel="stylesheet" href="/api/css/admin.css" />
 
-    <script src="/js/admin.js" type="text/javascript"></script>   
-    <script src="/js/bootstrap.js" type="text/javascript"></script>   
+    <script src="/api/js/admin.js" type="text/javascript"></script>   
+    <script src="/api/js/bootstrap.js" type="text/javascript"></script>   
 
   </head>
   <body>
@@ -22,7 +19,7 @@
       <div id="header">	
 	<div class="inner">
 	  <div class="logo_container">
-	    <a title="LaunchOpen" href="/"><img title="LaunchOpen" alt="LaunchOpen" src="/img/logo.png"></a>
+	    <a title="LaunchOpen" href="/api/"><img title="LaunchOpen" alt="LaunchOpen" src="/api/img/logo.png"></a>
 	  </div>
 	</div>
       </div>
@@ -49,27 +46,30 @@
 	  
 	  <p>This software expects routes that look like this:</p>
 
-	  <p>"/v0.1/" </p>
+	  <p><b>Base url is: http://das.launchopen.com/api/v0.1/</b></p>
 
-	  <p>  GET "/v0.1/:name-of-collection" </p>
+	  <p>Appended to the base URL is: </p>
 
-	  <p>  GET "/v0.1/:name-of-collection/sort/:field-to-sort-by" </p>
 
-	  <p>  GET "/v0.1/:name-of-collection/sort/:field-to-sort-by/:offset-by-how-many/:return-how-many" </p>
+	  <p>  GET "/:name-of-collection" </p>
 
-	  <p>  GET  "/v0.1/:name-of-collection/match-field/:match-field/match-value/:match-value" </p>
+	  <p>  GET "/:name-of-collection/sort/:field-to-sort-by" </p>
 
-	  <p> GET "/v0.1/:name-of-collection/sort/:field-to-sort-by/:offset-by-how-many/:return-how-many/match-field/:match-field/match-value/:match-value" </p>
+	  <p>  GET "/:name-of-collection/sort/:field-to-sort-by/:offset-by-how-many/:return-how-many" </p>
 
-	  <p>  GET "/v0.1/:name-of-collection/:document-id" </p>
+	  <p>  GET  "/:name-of-collection/match-field/:match-field/match-value/:match-value" </p>
 
-	  <p>  POST "/v0.1/:name-of-collection/:document-id" </p>
+	  <p> GET "/:name-of-collection/sort/:field-to-sort-by/:offset-by-how-many/:return-how-many/match-field/:match-field/match-value/:match-value" </p>
 
-	  <p>  PUT "/v0.1/:name-of-collection/:document-id" </p>
+	  <p>  GET "/:name-of-collection/:document-id" </p>
 
-	  <p>  PUT "/v0.1/:name-of-collection/" </p>
+	  <p>  POST "/:name-of-collection/:document-id" </p>
 
-	  <p>  DELETE "/v0.1/:name-of-collection/:document-id" </p>
+	  <p>  PUT "/:name-of-collection/:document-id" </p>
+
+	  <p>  PUT "/:name-of-collection/" </p>
+
+	  <p>  DELETE "/:name-of-collection/:document-id" </p>
 
 	  <p><a href="https://github.com/HJOPEN/OperationOpen/wiki/MongoDB-Schema-of-July,-2014">Our schema is detailed at Github</a>.</p>
 
@@ -88,7 +88,7 @@
             headers: {
             'X-HTTP-Method-Override': 'PUT'
             },
-            url: "http://das.launchopen.com/v0.1/Awards",
+            url: "http://das.launchopen.com/api/v0.1/Awards",
 	    data: 
                   JSON.stringify({
                              "decorateImages": [
@@ -163,7 +163,7 @@
 	    $.ajax({
             type: "GET",
             contentType: "application/json",
-            url: "http://das.launchopen.com/v0.1/Awards/53bcc363e4b07b9b2edc8bfd",
+            url: "http://das.launchopen.com/api/v0.1/Awards/53bcc363e4b07b9b2edc8bfd",
 	    data: "",
             complete: function (data) {
               var rawResponse = data.responseText;
@@ -192,7 +192,7 @@
             headers: {
             'X-HTTP-Method-Override': 'POST'
             },
-            url: "http://das.launchopen.com/v0.1/Awards/53bcc363e4b07b9b2edc8bfd",
+            url: "http://das.launchopen.com/api/v0.1/Awards/53bcc363e4b07b9b2edc8bfd",
 	    data: 
                   JSON.stringify({
                              "decorateImages": [
@@ -286,7 +286,7 @@
             headers: {
             'X-HTTP-Method-Override': 'POST'
             },
-            url: "http://das.launchopen.com/v0.1/Awards/53bcc363e4b07b9b2edc8bfd",
+            url: "http://das.launchopen.com/api/v0.1/Awards/53bcc363e4b07b9b2edc8bfd",
 	    data: 
                   JSON.stringify({
                              "className": "HISTORY101"
@@ -348,7 +348,7 @@
             headers: {
             'X-HTTP-Method-Override': 'PUT'
             },
-            url: "http://das.launchopen.com/v0.1/Awards/53bcc363e4b07b9b2edc8bfd",
+            url: "http://das.launchopen.com/api/v0.1/Awards/53bcc363e4b07b9b2edc8bfd",
 	    data: 
                   JSON.stringify({
                              "className": "HISTORY101"
@@ -382,7 +382,7 @@
             headers: {
             'X-HTTP-Method-Override': 'DELETE'
             },
-            url: "http://das.launchopen.com/v0.1/Awards/53bcc363e4b07b9b2edc8bfd",
+            url: "http://das.launchopen.com/api/v0.1/Awards/53bcc363e4b07b9b2edc8bfd",
 	    data: "",
             complete: function (data) { alert("Done. Use FireFox for testing and look at the console.log to see the results.");  },
             success: function (data) { console.log(data);  },
@@ -401,7 +401,7 @@
 	    $.ajax({
             type: "GET",
             contentType: "application/json",
-            url: "http://das.launchopen.com/v0.1/UserProvider",
+            url: "http://das.launchopen.com/api/v0.1/UserProvider",
 	    data: "",
             complete: function (data) {
               var rawResponse = data.responseText;
@@ -421,7 +421,7 @@
 	    $.ajax({
             type: "GET",
             contentType: "application/json",
-            url: "http://das.launchopen.com/v0.1/User/match-field/gender/match-value/Female",
+            url: "http://das.launchopen.com/api/v0.1/User/match-field/gender/match-value/Female",
 	    data: "",
             complete: function (data) {
               var rawResponse = data.responseText;
@@ -443,7 +443,7 @@
 	    $.ajax({
             type: "GET",
             contentType: "application/json",
-            url: "http://das.launchopen.com/v0.1/User/sort/last_name/300/5",
+            url: "http://das.launchopen.com/api/v0.1/User/sort/last_name/300/5",
 	    data: "",
             complete: function (data) {
               var rawResponse = data.responseText;
@@ -463,7 +463,7 @@
 	    $.ajax({
             type: "GET",
             contentType: "application/json",
-            url: "http://das.launchopen.com/v0.1/User/sort/last_name/20/10/match-field/gender/match-value/Female",
+            url: "http://das.launchopen.com/api/v0.1/User/sort/last_name/20/10/match-field/gender/match-value/Female",
 	    data: "",
             complete: function (data) {
               var rawResponse = data.responseText;
